2005-10-06  Vincent Noel  <vnoel@cox.net>

	* monitor.c (mon_update_display): Remove.
	(monitor_callback): Only repaint the window if the updated log is
	currently displayed.

2005-10-06  Vincent Noel  <vnoel@cox.net>

	* logview.h: 
	* logview.c (CreateMainWin): Remove the monitor widget. This feels
	so good.

	* monitor.c (mon_format_line): Remove
	* monitor.c (mon_check_log) : remove.

	* log_repaint.c (logview_draw_log_lines): When monitoring, just
	append the new lines to the end of the displayed log and scroll
	down there.

	* monitor.c (mon_update_display): Remove a whole bunch of stuff
	for using the monitor widget.
	* log_repaint.c (log_repaint): Remove reference to monitor widget.

	* logview.h: 
	* monitor.c (monitor_stop, monitor_callback, monitor_start): 
	Use gnome_vfs_monitor to monitor file instead of polling. 

	* logview.c (CreateMainWin): Use the desktop monospace font by
	default.

	* log_repaint.c (logview_draw_log_lines): Prevent cast
	warning. Part of bug #318095. Patch by Stanislav Brabec.
	* about.c: Fix missing include. Part of bug #318095. Patch
	by Stanislav Brabec.

2006-10-04  Rodrigo Moya <rodrigo@novell.com>

	* logrtns.c (file_exist): added missing argument to g_snprintf.

2005-09-26  noel  <vnoel@cox.net>

	* logview.c (FileSelectResponse): Fixed a C99-ism. Patch from Jens
	Granseuer, fixes bug #317208.

2005-09-21  noel  <vnoel@cox.net>

	* logview.c (logview_save_prefs): Fix a crash when switching to
	default font size without any log opened. Fix bug #316829.

2005-09-20  Vincent Noel  <vnoel@cox.net>

	* logview.c: Fix a crash when exiting without any log opened.
	Fix bug #316738. Patch from Luke Macken.

==================== 2.12.0 ====================

2005-08-01  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (logview_draw_log_lines): Don't crash on amd64
	arch. Patch from Joe Marcus Clarke.

2005-07-19  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_menus_set_state): Fix the Calendar menu item
	sensitivity.
